# pyttsx3

./: .gitignore  .pre-commit-config.yaml  Importance of 108  LICENSE  MANIFEST  README.md  README.rst  app.py  demo properties  demo.py  makefile  pyproject.toml  pyttsx4_say_test.py  pyttsx4_test.py  requirements.txt  setup.cfg  setup.py  test.py  test2.py
.github/workflows/: python-macos-say_test.yml  python-macos-test.yml  python_publish.yml  pythonpublish.yml
docs/: Makefile  conf.py  drivers.rst  engine.rst  index.rst  install.rst  make.bat  support.rst  usage_docs.md
example/: main.py  repeatvoice.py
pyttsx3/: __init__.py  driver.py  engine.py  six.py  voice.py
pyttsx3/drivers/: __init__.py  _espeak.py  avspeech.py  avsynth.py  dotnetspeech.py  dummy.py  espeak.py  nsss.py  sapi4.py  sapi5.py
pyttsx4/: driver.py  engine.py  six.py
pyttsx4/drivers/: __init__.py  _espeak.py  coqui_ai_tts.py  dummy.py  espeak.py  nsss.py  sapi5.py
tests/: conftest.py  test_engines.py  test_pyttsx3.py
